<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Find</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入你的手机号</string>
    <string name="login_password_hint">密码不少于6位</string>
    <string name="login_password_number_error">密码不能少于6位</string>
    <string name="login_confim_pwd_hint">请再次输入你的密码</string>
    <string name="login_confim_phonenum">验证码</string>
    <string name="login_confim_phonenum_hint">请输入验证码</string>
    <string name="login_get_verfy_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">忘记密码</string>
    <string name="register_txt2">注册</string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_confim_pwd">确认密码 </string>
    <string name="login_nick">昵称</string>
    <string name="login_nick_tip">输入昵称（不多于6位）</string>
    <string name="message_search_hint">搜索</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="mian_tab_find">发现</string>
    <string name="main_tab_nears">附近</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_birthday">生日</string>
    <string name="add_birthday_hint">选择生日</string>
    <string name="add_game">游  戏</string>
    <string name="add_game_hint">选择游戏</string>
    <string name="love_status">恋爱状态</string>
    <string name="love_status_hint">选择恋爱状态</string>
    <string name="register_hobbi">个人爱好</string>
    <string name="register_hobbi_hint">设置个人爱好</string>
    <string name="add_name_hint">请输入昵称</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="register_select_sex">性别</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">手机号码不能为空</string>
    <string name="toast_error_confim_code_null">验证码不能为空</string>
    <string name="toast_error_interest_null">爱好不能为空</string>
    <string name="toast_error_game_null">还未选择游戏</string>
    <string name="toast_error_love_null">还未选择情感状况</string>
    <string name="toast_error_nick_null">昵称不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="toast_error_change_avator">请选择头像</string>
    <string name="toast_error_birth_null">生日不能为空</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
    <string name="title_activity_near_people_map">NearPeopleMapActivity</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="title_activity_game_fruit">GameFruitActivity</string>
    <string name="time">所用时间为：$秒</string>
    <string name="quit">退出</string>
    <string name="sure_quit">确定退出游戏？</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="title_activity_guess_number">GuessNumberActivity</string>
    <string name="color_black">黑色</string>
    <string name="color_white">白色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="color_orange">棕色</string>
    <string name="color_purple">紫色</string>
    <string name="color_gray">灰色</string>
    <string name="title_activity_mixed_color">MixedColorActivity</string>
    <string name="title_activity_mixed_color_menu">MixedColorMenuActivity</string>
    <string name="title_activity_register_activity2">RegisterActivity2</string>
    <string name="title_activity_register_activity3">RegisterActivity3</string>
    <string name="title_activity_slide_set_my_info">SlideSetMyInfoActivity</string>
    <string name="title_activity_my_game">MyGameActivity</string>
    <string name="black_list">黑名单</string>
    <string name="title_activity_position_roam">PositionRoamActivity</string>
    <string name="game_difficulty">游戏难度</string>
    <string name="only_female">只看女生</string>
    <string name="only_male">只看男生</string>
    <string name="all_female_male">全部查看</string>
    <string name="title_activity_attractions_roma">AttractionsRomaActivity</string>
    <string name="title_activity_attractions_roma_map">AttractionsRomaMapActivity</string>
    <string name="title_activity_photo_wall">PhotoWallActivity</string>
    <string name="set_info_photo_wall">照片墙</string>
    <string name="title_activity_select_picture">SelectPictureActivity</string>
    <string name="title_activity_image_show">ImageShowActivity</string>
    <string name="title_activity_photo_wall_fall">PhotoWallFallActivity</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="title_activity_image_details">ImageDetailsActivity</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="crop_saving" translatable="false">正在保存…</string>
    <string name="crop_wait" translatable="false">请等待…</string>
    <string name="crop_pick_error" translatable="false">没有可用图片资源</string>
    <string name="crop_done" translatable="false">确认</string>
    <string name="crop_cancel">取消</string>
    <string name="username_has_exited">当前手机号码已被注册</string>
    <string name="slide_set_account_safe">账号与安全</string>
    <string name="slide_set_account_bangding">账号绑定</string>
    <string name="slide_set_hiding_mode">隐身模式</string>
    <string name="slide_set_meaasge_notify">消息提醒</string>
    <string name="slide_set_person_dress">个性装扮</string>
    <string name="slide_set_emoj_store">表情商城</string>
    <string name="title_activity_set_message_notify">SetMessageNotifyActivity</string>
    <string name="title_activity_set_my_info_activity2">SetMyInfoActivity2</string>
    <string name="info_ddetault_text">正在加载&#8230;</string>
    <string name="title_activity_edit_my_info">EditMyInfoActivity</string>
    <string name="info_edit_person_hint">有什么话想说给附近的朋友听？</string>
    <string name="info_edit_career_hint">请选择你的职业</string>
    <string name="info_edit_company_hint">请填入你所在的公司</string>
    <string name="info_edit_school_hint">请填入你的学校</string>
    <string name="info_edit_hometown_hint">请选择你的家乡</string>
    <string name="info_edit_book_hint">请填入你喜欢的书籍</string>
    <string name="info_edit_movie_hint">请填入你喜欢的电影</string>
    <string name="info_edit_music_hint">请填入你喜欢的音乐</string>
    <string name="info_edit_interests_hint">请填入你的爱好</string>
    <string name="info_edit_usually_appear_hint">请填入你的常出没地</string>
    <string name="register_sex_selected_no_change_tips">性别选定之后不可改变，请慎重选择</string>
    <string name="register_nick_too_long_error">昵称不能超过6位</string>
    <string name="title_activity_citi_list">CitiListActivity</string>
    <string name="title_activity_province_list">ProvinceListActivity</string>
    <string name="title_activity_select_career">SelectCareerActivity</string>
    <string name="career_list_item_IT">计算机／互联网／通信</string>
    <string name="career_list_item_Gong">生产／工艺／制造</string>
    <string name="career_list_item_Shang">商业／服务业／个体经营</string>
    <string name="career_list_item_Jin">金融／银行／投资／保险</string>
    <string name="career_list_item_Wen">文化／广告／传媒</string>
    <string name="career_list_item_YiShu">娱乐／艺术／表演</string>
    <string name="career_list_item_YiLiao">医疗／护理／制药</string>
    <string name="career_list_item_Fa">律师／法务</string>
    <string name="career_list_item_Jiao">教育／培训</string>
    <string name="career_list_item_Zheng">公务员／事业单位</string>
    <string name="career_list_item_Xue">学生</string>
    <string name="career_list_item_No">无</string>
    <string name="context_menu">Context menu</string>
    <string name="title_activity_game_center">GameCenterActivity</string>
    <string name="game_lianliankan_name">水果连连看</string>
    <string name="game_guess_number_name">猜数字</string>
    <string name="game_mixed_color_name">Mixed color</string>
    <string name="game_oh_my_egg_name">Oh my egg</string>
    <string name="game_finger_game">猜拳大比拼</string>
    <string name="game_lianliankan_rule_details">与传统连看一致</string>
    <string name="game_guess_number_rule_details">游戏产生0至99之间的随机数，用户进行猜测</string>
    <string name="game_mixed_color_rule_details">根据上方的文字描述的颜色，选出与下方对应文字颜色一致即可</string>
    <string name="game_oh_my_egg_rule_details">通过重力感应控制小鸟躲避坏鸟碰到鸡蛋</string>
    <string name="game_finger_game_rule_details">在30秒时间内，选择每次猜拳的结果，纪录分数</string>
    <string name="game_lianliankan_win_method">在规定的时间内将所有图标消灭</string>
    <string name="game_guess_number_win_method">在规定的次数内猜中数字</string>
    <string name="game_mixed_color_win_method">在规定的时间选出颜色，选中次数达到规定数目</string>
    <string name="game_oh_my_egg_win_method">控制小鸟碰到鸡蛋</string>
    <string name="game_finger_game_win_method">30秒内，分数达到一定要求则获胜</string>
    <string name="title_activity_attractions_roma_activity2">AttractionsRomaActivity2</string>
    <string name="roma_tips_1">可以漫游到景点，认识那里的人和了解风景情况</string>
    <string name="roma_tips_2">按住按钮，开始漫游</string>
    <string name="title_activity_edit_personalized_signature">EditPersonalizedSignatureActivity</string>
    <string name="fragment_find_life_circle">时间线</string>
    <string name="fragment_find_life_circle_tips">发现身边的新鲜事</string>
    <string name="fragment_find_nears_friends">附近的人</string>
    <string name="fragment_find_attractions_roma">景点漫游</string>
    <string name="fragment_find_sign_in">全民签到</string>
    <string name="fragment_find_community_icon">游戏社区</string>
    <string name="fragment_find_eat_drink_play_happy">吃喝玩乐</string>
    <string name="title_activity_shake_for_near_people">ShakeForNearPeopleActivity</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="title_activity_add_friends_from_address_book">AddFriendsFromAddressBookActivity</string>
    <string name="chat_more_check_info">查看资料</string>
    <string name="chat_more_invite_game">邀请游戏</string>
    <string name="chat_more_set_black">拉黑</string>
    <string name="chat_more_delete_recent">清空会话</string>
</resources>