<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
            android:inputType="textPassword"
            android:hint="@string/login_email_hint" />
    </LinearLayout>
    
    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_nick"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nick"
            style="@style/Register_Edit"
            android:hint="@string/login_nick_tip" />
    </LinearLayout>
    
    <LinearLayout 
        style="@style/Register_Input">
        
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/register_select_sex"
            android:textStyle="bold" />
        
        <RadioGroup 
            android:id="@+id/sex_radioGroup" 
            android:orientation="horizontal"
            android:contentDescription="性别" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
            
            <RadioButton 
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:id="@+id/radioMale" 
                android:text="男" 
                android:checked="true"/>
            
            <RadioButton 
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:id="@+id/radioFemale" 
                android:text="女"/>
            
        </RadioGroup>
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/register_avator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/base_edit_input"
        android:minHeight="80dp"
        android:layout_marginTop="10.0dp"
        android:layout_marginLeft="10.0dp"
        android:layout_marginRight="10.0dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator" 
            android:textStyle="bold"
            android:paddingLeft="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/register_select_avator"
                style="@style/Smile.ImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                android:src="@drawable/default_head" />

            <ImageView
                android:id="@+id/register_select_avator_arraw"
                style="@style/Smile.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>