<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
     <LinearLayout  
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dip"
         android:orientation="horizontal">
         
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:text="@string/login_account"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:digits="0123456789"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:hint="@string/login_username_hint" />
    </LinearLayout>
    
     <ImageView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
         android:src="@drawable/register_line"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dip"/>

    <LinearLayout 
        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:orientation="horizontal">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:text="@string/login_confim_phonenum"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_confim_code"
            style="@style/Register_Edit"
             android:inputType="textPassword"
             android:layout_marginRight="20dp"
            android:hint="@string/login_confim_phonenum_hint" />
        
        <!-- <Button
            android:id="@+id/register_btn_get_verfy_code"
            android:layout_width="100dp"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login_get_verfy_code"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" /> -->
            
            <com.dd.library.CircularProgressButton
		        android:id="@+id/register_btn_get_verfy_code"
		        android:layout_width="wrap_content"
		        android:layout_margin="@dimen/activity_vertical_margin"
		        android:gravity="center"
		        android:layout_height="48dp"
		        android:textColor="@color/cpb_white"
		        android:textSize="18sp"
		        app:cpb_cornerRadius="48dp"
		        app:cpb_iconComplete="@drawable/ic_action_accept"
		        app:cpb_iconError="@drawable/ic_action_cancel"
		        app:cpb_textIdle="@string/login_get_verfy_code" />
        
    </LinearLayout>
    
     <ImageView 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
         android:src="@drawable/register_line"
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dip"/>

     <!-- 
    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
            android:inputType="textPassword"
            android:hint="@string/login_email_hint" />
    </LinearLayout>
     -->

</LinearLayout>
