<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dip"
        android:paddingLeft="20dp"
        android:layout_height="35dp">

        <RelativeLayout 
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_width="fill_parent">
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content">
                
                <TextView 
		            android:layout_height="wrap_content"
		            android:text="男"
		            android:textSize="15sp"
		            android:layout_gravity="center_vertical"
		            android:layout_width="wrap_content"/>     
	                
	            <ImageView
	                android:id="@+id/register_sex_select_male"
	                android:layout_width="20dp"
	                android:layout_gravity="center_vertical"
	                android:src="@drawable/register_sex_select_n"
	                android:layout_marginLeft="60dp"
	                android:layout_height="20dp"/>
                
            </LinearLayout>
                
             
                
            <ImageView 
                android:id="@+id/register_sex_vertical_line"
	            android:layout_width="wrap_content"
	            android:layout_centerInParent="true"
	            android:src="@drawable/register_line_vertical"
	            android:layout_height="30dp"/>
            
            <LinearLayout 
		        android:layout_width="wrap_content"
		        android:orientation="horizontal"
		        android:layout_centerVertical="true"
		        android:layout_alignLeft="@id/register_sex_vertical_line"
		        android:layout_height="wrap_content">
	            
                <TextView 
	                android:id="@+id/register_set_femal_tv"
	                android:layout_height="wrap_content"
	                android:text="女"
	                android:textSize="15sp"
	                android:layout_gravity="center_vertical"
	                android:layout_marginLeft="45dp"
	                android:layout_width="wrap_content"/>
	                
	            <ImageView
	                android:id="@+id/register_sex_select_female"
	                android:layout_width="20dp"
	                android:layout_gravity="center_vertical"
	                android:src="@drawable/register_sex_select_n"
	                android:layout_marginLeft="45dp"
	                android:layout_height="20dp"/>  
		        
		    </LinearLayout>
                
            
        </RelativeLayout>
        
        
    </RelativeLayout>
    
    <TextView 
        android:text="@string/register_sex_selected_no_change_tips"
        android:layout_height="wrap_content"
        android:textColor="#999999"
		android:textSize="12sp"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_marginTop="20dip"
       	android:layout_width="fill_parent"/>
    
    
    
    <ImageView 
        android:id="@+id/register_sex_select_layout_line"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:paddingLeft="20dp"
	     android:src="@drawable/register_line"
	     android:layout_marginRight="20dp"/>
    
    <LinearLayout  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dip"
	    android:orientation="horizontal">
         
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:paddingLeft="20dp"
	        android:textSize="20sp"
	        android:text="@string/add_game"
	        android:textColor="#000000"/>
	
	    <EditText
	        android:id="@+id/register_set_game_et"
	        style="@style/Register_Edit"
	        android:layout_marginRight="20dp"
	        android:ems="10"
	        android:editable="false"
	        android:cursorVisible="false"
	        android:gravity="center_vertical"
	        android:hint="@string/add_game_hint" />

    </LinearLayout>
    
    <ImageView 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:paddingLeft="20dp"
	     android:src="@drawable/register_line"
	     android:layout_marginRight="20dp"
	     android:layout_marginTop="20dip"/>
    
    <LinearLayout  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dip"
	    android:orientation="horizontal">
         
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:paddingLeft="20dp"
	        android:textSize="20sp"
	        android:text="@string/love_status"
	        android:textColor="#000000"/>
	
	    <EditText
	        android:id="@+id/register_set_love_et"
	        style="@style/Register_Edit"
	        android:layout_marginRight="20dp"
	        android:ems="10"
	        android:editable="false"
	        android:cursorVisible="false"
	        android:gravity="center_vertical"
	        android:hint="@string/love_status_hint" />

    </LinearLayout>
      
    <ImageView 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:paddingLeft="20dp"
	     android:src="@drawable/register_line"
	     android:layout_marginRight="20dp"
	     android:layout_marginTop="20dip"/>
    
    <LinearLayout  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dip"
	    android:orientation="horizontal">
         
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:paddingLeft="20dp"
	        android:textSize="20sp"
	        android:text="@string/register_hobbi"
	        android:textColor="#000000"/>
	
	    <EditText
	        android:id="@+id/register_set_hobbi_et"
	        style="@style/Register_Edit"
	        android:layout_marginRight="20dp"
	        android:ems="10"
	        android:gravity="center_vertical"
	        android:hint="@string/register_hobbi_hint" />

    </LinearLayout>
    
    <ImageView 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:paddingLeft="20dp"
	     android:src="@drawable/register_line"
	     android:layout_marginRight="20dp"
	     android:layout_marginTop="20dip"/>

</LinearLayout>
