<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_popup_window"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/pop_check_info"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/chat_more_check_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pop_check_info"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/chat_more_check_info"
                android:textColor="@color/gray_font" />
        </RelativeLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="120dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/pop_invite_game"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/chat_more_invite_game" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pop_invite_game"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/chat_more_invite_game"
                android:textColor="@color/gray_font" />
        </RelativeLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="120dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/pop_set_black"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/chat_more_set_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pop_set_black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/chat_more_set_black"
                android:textColor="@color/gray_font" />
        </RelativeLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="120dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/pop_delete_recent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/chat_more_delete_recent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pop_delete_recent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/chat_more_delete_recent"
                android:textColor="@color/gray_font" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>